--- a/src/styles/highlighter-widget.scss
+++ b/src/styles/highlighter-widget.scss
@@ -1,4 +1,5 @@
 @import 'highlight-color-swatch';
+@import 'highlighter-icon-reset';
 
 // Highlight widget component (tooltip + action menu + inline comment editor)
 .obsidian-highlight-overlay.obsidian-highlight-overlay-dark .obsidian-highlight-widget-badge {
@@ -207,19 +208,7 @@
 	}
 
 	svg {
-		width: 16px !important;
-		height: 16px !important;
-		margin: 0 !important;
-		padding: 0 !important;
-		display: block !important;
-		position: static !important;
-		top: auto !important;
-		right: auto !important;
-		bottom: auto !important;
-		left: auto !important;
-		transform: none !important;
-		vertical-align: middle !important;
-		flex-shrink: 0 !important;
+		@include highlighter-svg-icon-reset;
 	}
 
 	&.mod-secondary {
